# aggregate

./: Cargo.toml
aggregate/: Cargo.toml  README.md
aggregate/src/: default.rs  lib.rs  tests.rs
aggregate_derive/: Cargo.toml  README.md
aggregate_derive/src/: lib.rs
aggregate_types/: Cargo.toml  README.md
aggregate_types/src/: compat.rs  fmt.rs  helper.rs  lib.rs  shortcuts.rs
