[package]
name = "aggregate"
version = "0.2.7"
edition = "2021"
license = "MIT"
authors = ["voidentente <voidentente@paranoici.org>"]
repository = "https://github.com/voidentente/aggregate"
description = "Aggregate attributes of structs for runtime"

[features]
default = ["derive", "debug", "helper", "default_impl"]
derive = ["dep:aggregate_derive", "syn"]
debug = ["aggregate_types/debug"]
helper = ["aggregate_types/helper"]
default_impl = []
syn = []

[dependencies.aggregate_types]
path = "../aggregate_types"
version = "0.2.7"

[dependencies.aggregate_derive]
path = "../aggregate_derive"
version = "0.2.7"
optional = true

[dependencies.syn]
version = "1.0.107"