[package]
name = "aggregate"
version = "0.3.1"
edition = "2021"
license = "MIT"
authors = ["voidentente <voidentente@paranoici.org>"]
repository = "https://github.com/voidentente/aggregate"
description = "Aggregate attributes of structs for runtime"

[features]
default = ["derive", "impl", "fmt"]
derive = ["dep:aggregate_derive"]
fmt = ["aggregate_types/fmt"]
impl = []

[dependencies.aggregate_types]
path = "../aggregate_types"
version = "0.3.1"

[dependencies.aggregate_derive]
path = "../aggregate_derive"
version = "0.3.1"
optional = true