[package]
name = "aggregate_derive"
version = "0.1.0"
edition = "2021"
authors = ["voidentente <voidentente@paranoici.org>"]
repository = "https://github.com/voidentente/aggregate"

[lib]
proc-macro = true

[dependencies.aggregate_types]
path = "../aggregate_types"

[dependencies.syn]
version = "1.0.107"

[dependencies.quote]
version = "1.0.23"