[package]
name = "aggregate_derive"
version = "0.3.3"
edition = "2021"
license = "MIT"
authors = ["voidentente <voidentente@paranoici.org>"]
repository = "https://github.com/voidentente/aggregate"
description = "Aggregate attributes of structs for runtime"

[lib]
proc-macro = true

[dependencies.aggregate_types]
path = "../aggregate_types"
version = "0.3.3"