[package]
name = "aggregate_types"
version = "0.2.4"
edition = "2021"
license = "MIT"
authors = ["voidentente <voidentente@paranoici.org>"]
repository = "https://github.com/voidentente/aggregate"
description = "Aggregate attributes of structs for runtime"

[features]
debug = ["syn/extra-traits"]
helper = []

[dependencies.syn]
version = "1.0.107"

[dependencies.quote]
version = "1.0.23"